# adsreport

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  open-files-in-editor.ps1  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
adsreport/: __init__.py  __main__.py  app.py  cli.py  config.py  constants.py
adsreport/core/: crypto.py  errors.py  logging.py  result.py  time.py
adsreport/db/: alembic.ini  base.py  session.py
adsreport/db/migrations/: env.py
adsreport/db/models/: __init__.py  ad.py  ad_account.py  adset.py  audit_log.py  campaign.py  insight.py  settings.py  sync_run.py  user.py
adsreport/i18n/: __init__.py
adsreport/i18n/locales/: en-US.json  pt-BR.json
adsreport/jobs/: cleanup_job.py  sync_job.py
adsreport/repositories/: ad_account_repo.py  adset_repo.py  base.py  campaign_repo.py  insight_repo.py  settings_repo.py  sync_run_repo.py  user_repo.py
adsreport/services/: ads_sync_service.py  auth_service.py  cache_service.py  config_loader.py  facebook_client.py  i18n_service.py  leads_report_service.py  onboarding_service.py  pdf_export_service.py  report_service.py  scheduler_service.py  settings_service.py
adsreport/ui/: theme.py
adsreport/ui/assets/: adsreport.css
adsreport/ui/callbacks/: __init__.py  accounts_callbacks.py  auth_callbacks.py  campaigns_callbacks.py  (+4 more)
docs/: facebook-setup.md  i18n-contributing.md
docs/installation/: source.md
examples/: __init__.py  accounts.py  ads.py  ads_library.py  adsets.py  api.py  auth.py  authentication.py  budget_schedules.py  callback_server.py  campaigns.py  duplication.py  http_auth_integration.py  insights.py  openai_deep_research.py  pipeboard_auth.py  reports.py  server.py  targeting.py  utils.py
specs/001-robust-pdf-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  factories.py
tests/e2e/: test_dashboard_smoke.py
tests/integration/: test_facebook_client.py  test_onboarding_flow.py  test_sync_flow.py
tests/unit/: test_accounts_callbacks.py  test_auth_service.py  test_crypto.py  test_dashboard_callbacks.py  test_dashboard_page.py  test_facebook_client_errors.py  test_filter_bar.py  test_i18n.py  test_insight_repo.py  test_leads_report_service.py  test_pdf_export_service.py  test_report_service.py  test_settings_service.py  test_time.py
(+22 files in other folders)
